# zathura-extensions

./: .gitignore  .gitmodules  ARCHITECTURE_ANALYSIS.md  CURRENT_STATUS.md  IMPLEMENTATION_REPORT.md  LICENSE  README.md  STREAMING_SUCCESS_SUMMARY.md  SUBMODULE_SETUP.md  ZATHURA_MODIFICATIONS_REPORT.md  debug_tts_error.sh  streaming_default_test.md  streaming_test_plan.md  test_macro.c  test_tts_config  test_tts_functionality.md  test_tts_functionality.sh  test_tts_shortcuts.sh  test_zathurarc  tts_research.md  tts_streaming_design.md  zathura-utility-plugin-support-fixed.patch  zathura-utility-plugin-support.patch
.github/workflows/: ci.yml  package.yml
.kiro/specs/text-to-speech-reader/: design.md  requirements.md  tasks.md
docs/: index.html  zathura-utility-plugin-support-fixed.patch
zathura-tts/: .gitignore  PACKAGING.md  README.md  debug_content_type  debug_content_type.c  debug_detailed  debug_detailed.c  debug_table  debug_table.c  debug_table_detailed  debug_table_detailed.c  debug_table_processing  debug_table_processing.c  meson.build  meson_options.txt  pyproject.toml  test_compile.c  test_espeak_engine.c  test_piper_engine.c  test_plugin  test_plugin.c  test_special_content  test_special_content.c  test_special_content_handling.c  test_speech_dispatcher_engine.c  test_standalone_functions  test_standalone_functions.c  test_streaming.c  test_streaming_makefile  test_text_extractor.c  test_text_extractor_simple.c  test_tts_engine.c
zathura-tts/.github/workflows/: package.yml
zathura-tts/data/: meson.build  org.pwmt.zathura-tts.desktop.in
zathura-tts/debian/: changelog  control  copyright  rules  zathura-tts-dev.install  zathura-tts.install  zathura-tts.postinst  zathura-tts.prerm
zathura-tts/docs/: BUILD.md  DEVELOPER.md  INSTALLATION.md  QUICKSTART.md  TROUBLESHOOTING.md
zathura-tts/scripts/: build-deb.sh
zathura-tts/src/: .plugin.c.swp  plugin.c  plugin.h  tts-audio-controller.c  tts-audio-controller.h  tts-config.c  tts-config.h  tts-engine-espeak.c  tts-engine-impl.h  tts-engine-piper.c  tts-engine-speechd.c  tts-engine.c  tts-engine.h  tts-error.c  tts-error.h  tts-streaming-engine.c  tts-streaming-engine.h  tts-text-extractor-standalone.c  tts-text-extractor.c  tts-text-extractor.h  tts-ui-controller.c  tts-ui-controller.h  zathura-plugin.h  zathura-runtime.h  zathura-stubs.c  zathura-stubs.h
zathura-tts/tests/: meson.build  test-audio-controller.c  test-framework.c  test-framework.h  test-integration-simple-runner  test-integration-simple.c  test-integration.c  test-main.c  test-runner  test-simple.c
zathurarc-maker/: index.html
